--- a/research.qmd
+++ b/research.qmd
@@ -34,13 +34,23 @@ bt <- function(link, label, icon){
 }
 ```
 
-## Publication
+## Publications
 
-**Ming, D.**, Williamson, D., and Guillas, S. (2022) Deep Gaussian process emulation using stochastic imputation. _Technometrics_. 0(0), 1-12.
+**Ming, D.**, Williamson, D., and Guillas, S. (2023) Deep Gaussian process emulation using stochastic imputation. _Technometrics_. 65(2), 150-161.
 
 `r bt("https://arxiv.org/abs/2107.01590", "Preprint", "far fa-file-pdf")` `r bt("https://doi.org/10.1080/00401706.2022.2124311", "DOI", "ai ai-open-access ai-lg")`  
 
 **Ming, D.** and Guillas, S. (2021) Linked Gaussian process emulation for systems of computer models using Matérn kernels and adaptive design, _SIAM/ASA Journal on Uncertainty Quantification_. 9(4), 1615-1642.
 
 `r bt("https://doi.org/10.48550/arXiv.1912.09468", "Preprint", "far fa-file-pdf")` `r bt("https://doi.org/10.1137/20M1323771", "DOI", "ai ai-open-access ai-lg")`
+
+## Research Grants
+
+**User-Bespoke AI-Enhanced Decision Support to Deliver UK Woodland Expansion for Net Zero** (£2M), _EPSRC_, 2023-2025
+
+ - Co-Investigator on AI development
+ 
+**NetZeroPlus: Sustainable Treescapes Demonstrator and Decision Tools** (£4M), _BBSRC_, 2022-2023
+
+- Co-Investigator on emulator development
 
