--- a/research.qmd
+++ b/research.qmd
@@ -36,11 +36,15 @@ bt <- function(link, label, icon){
 
 ## Publications
 
+**Ming, D.** and Williamson, D. (2023) Linked deep Gaussian process emulation for model networks. arXiv:2306.01212. _Under Review_.
+
+`r bt("http://arxiv.org/abs/2306.01212", "Preprint", "far fa-file-pdf")`
+
 **Ming, D.**, Williamson, D., and Guillas, S. (2023) Deep Gaussian process emulation using stochastic imputation. _Technometrics_. 65(2), 150-161.
 
 `r bt("https://arxiv.org/abs/2107.01590", "Preprint", "far fa-file-pdf")` `r bt("https://doi.org/10.1080/00401706.2022.2124311", "DOI", "ai ai-open-access ai-lg")`  
 
-**Ming, D.** and Guillas, S. (2021) Linked Gaussian process emulation for systems of computer models using Matérn kernels and adaptive design, _SIAM/ASA Journal on Uncertainty Quantification_. 9(4), 1615-1642.
+**Ming, D.** and Guillas, S. (2021) Linked Gaussian process emulation for systems of computer models using Matérn kernels and adaptive design. _SIAM/ASA Journal on Uncertainty Quantification_. 9(4), 1615-1642.
 
 `r bt("https://doi.org/10.48550/arXiv.1912.09468", "Preprint", "far fa-file-pdf")` `r bt("https://doi.org/10.1137/20M1323771", "DOI", "ai ai-open-access ai-lg")`
 
@@ -53,5 +57,12 @@ bt <- function(link, label, icon){
 **NetZeroPlus: Sustainable Treescapes Demonstrator and Decision Tools** (£4M), _BBSRC_, Co-I on emulator development, 2022-2023
 
 `r bt("https://netzeroplus.ac.uk", "Website", "fa fa-globe")`
+
+## Non-Peer-Reviewed Manuscripts
+
+**Ming, D.** (2020) Notes on Seismic Source Models in Elastostatic. EarthArXiv.
+
+`r bt("https://doi.org/10.31223/osf.io/234kp", "Preprint", "far fa-file-pdf")`
+
 
 
