--- a/software.qmd
+++ b/software.qmd
@@ -51,3 +51,7 @@ bt <- function(link, label, icon){
 
 `r bt("https://mingdeyu.github.io/dgpsi-R/", "Website", "fa fa-globe")` `r bt("https://github.com/mingdeyu/dgpsi-R", "Github", "fab fa-github")` `r bt("https://cloud.r-project.org/web/packages/dgpsi/index.html", "CRAN", "fab fa-r-project")` `r bt("https://anaconda.org/conda-forge/dgpsi", "Conda", "fab fa-python")`
 
+```{r embed-xaringan, echo=FALSE}
+xaringanExtra::embed_xaringan(url = "tutorial.html", ratio = "4:3")
+```
+
