--- a/about.qmd
+++ b/about.qmd
@@ -22,9 +22,9 @@ Prior to joining SoM, I did my postgraduate degrees at the Imperial College Lond
 
 ## Job Opportunity
 
-I am currently looking for a Research Fellow in Artificial Intelligence based at UCL SoM and Department of Mathematics. The post is funded by the EPSRC project ADD-TREES (AI-elevated Decision-support via Digital Twins for Restoring and Enhancing Ecosystem Services) and is available immediately until 31 March 2025. 
+I am currently looking for a Research Fellow in Statistical Science based at UCL SoM and Department of Mathematics. The post is funded by the EPSRC project ADD-TREES (AI-elevated Decision-support via Digital Twins for Restoring and Enhancing Ecosystem Services) and is available immediately until 31 March 2025. 
 
-The post holder will work with economists, mathematicians, statisticians, and research software engineers (RSEs) to develop innovative AI techniques on bespoke and adaptive methods for automatic depp Gaussian process emulation of a network of multidisciplinary models, enabling real-time decision support for UK’s woodland expansion, a critical step in achieving UK’s commitment to Net Zero by 2050.
+The post holder will work with economists, mathematicians, statisticians, and research software engineers (RSEs) to develop innovative AI techniques on bespoke and adaptive methods for automatic deep Gaussian process emulation of a network of multidisciplinary models, enabling real-time decision support for UK’s woodland expansion, a critical step in achieving UK’s commitment to Net Zero by 2050.
 
-_Learn more about the project and how to apply [here](https://www.ucl.ac.uk/work-at-ucl/search-ucl-jobs/details?nPostingId=5844&nPostingTargetId=14510&id=Q1KFK026203F3VBQBLO8M8M07&LG=UK&languageSelect=UK&mask=ext). Applications close on 19 September 2023_.
+_Learn more about the project and how to apply [here](https://www.ucl.ac.uk/work-at-ucl/search-ucl-jobs/details?jobId=15994&jobTitle=Research+Fellow+in+Statistical+Science). Applications close on 29 October 2023_.
 
