--- a/index.qmd
+++ b/index.qmd
@@ -3,31 +3,6 @@ page-layout: custom
 comments: false
 ---
 
-<style>
-body, html {
-  height: 100%;
-  width: 100%;
-  margin: 0;
-  padding: 0;
-}
-
-.container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%; /* 100% of the browser width */
-  height: 75vh; /* 75% of the viewport height */
-  overflow: hidden;
-}
-
-.container img {
-  max-width: 100%;  /* Scale the image down to fit the container width */
-  max-height: 100%; /* Scale the image down to fit the container height */
-  width: auto;
-  height: auto;
-}
-</style>
-
-<div class="container">
-  <img src="dgp_path.gif">
+<div style="width: 100vw; height: 75vh; display: flex; align-items: center; justify-content: center; margin: 0; padding: 0; overflow: hidden;">
+  <img src="dgp_path.gif" alt="Landing Page GIF" style="width: 100%; height: auto; display: block; margin: 0; padding: 0;">
 </div>
