--- a/research.qmd
+++ b/research.qmd
@@ -54,7 +54,7 @@ Yang, Y., **Ming, D.**, and Guillas, S. (2025) Distribution of deep Gaussian pro
 
 ## Research Grants
 
-**Knowledge Transfer Partnership** (£199,000), _Innovate UK_ & _Howden Re_, Co-PI (Academic Supervisor), 2025-2027
+**Knowledge Transfer Partnership** (£199,000), _Innovate UK & Howden Re_, Co-PI (Academic Supervisor), 2025-2027
 
 **Development and Calibration of a Mixed-Species Model for Enhanced Woodland Creation Support** (£160,000), _BBSRC_, Co-I on Model Calibration, 2024-2025
 
