--- a/talks.qmd
+++ b/talks.qmd
@@ -37,7 +37,7 @@ bt <- function(link, label, icon){
 
 ## 2024
 - Dec 2024, **Conference on Computational and Methodological Statistics** (invited)
-- Dec 2024, **AI for NetZero Conference** (contributing)
+- Dec 2024, **AI for NetZero Conference** (invited)
 - Jul 2024, **BNP Networking Workshop** (contributing)
 - Feb 2024, **SIAM Conference on Uncertainty Quantification (UQ24)** (invited)
 - Feb 2024, **UCL Physical Geography Seminar** (invited)
