--- a/research.qmd
+++ b/research.qmd
@@ -35,6 +35,9 @@ bt <- function(link, label, icon){
 ```
 
 ## Publications
+Septiandri, A., **Ming, D.**, DiazDelaO, A., Jendoubi, T., and Ray S. (2025) Integrative analysis and imputation of multiple data streams via deep Gaussian processes. arXiv:2505.12076, _Under Review_.
+
+`r bt("http://arxiv.org/abs/2505.12076", "Preprint", "far fa-file-pdf")`
 
 Yang, Y., **Ming, D.**, and Guillas, S. (2025) Distribution of deep Gaussian process gradients and sequential design for simulators with sharp variations. arXiv:2503.16027. _Under Review_.
 
@@ -54,7 +57,7 @@ Yang, Y., **Ming, D.**, and Guillas, S. (2025) Distribution of deep Gaussian pro
 
 ## Research Grants
 
-**Knowledge Transfer Partnership** (£199,000), _Innovate UK & Howden Re_, Co-PI (Academic Supervisor), 2025-2027
+**Knowledge Transfer Partnership** (£220,000), _Innovate UK & Howden Re_, Co-PI (Academic Supervisor), 2025-2027
 
 **Development and Calibration of a Mixed-Species Model for Enhanced Woodland Creation Support** (£160,000), _BBSRC_, Co-I on Model Calibration, 2024-2025
 
